# comp_prog_cnn_proj

./: CMakeLists.txt  Makefile  README.md
src/: cnn.c  cnn.h  image.c  image.h  main.c  utils.c  utils.h
